[package]
name = "gitlab-ci-status"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Tenstorrent AI LLC"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
git2 = "0.18"
anyhow = "1.0"
colored = "2.0"
urlencoding = "2.1"
